# sistem_securitate

./: docker-compose.yml  main.py  pyproject.toml  test_main.http
app/controllers/: product.py  quiz.py
app/core/: database.py  models.py  repository.py  settings.py
app/models/: product.py  question.py
app/repositories/: product.py  question.py
app/schemas/: product.py
app/services/: policies.py  product.py
app/static/css/: style.css
app/static/js/plugins-init/: magnific-popup-init.js
app/templates/components/: question.html
app/templates/layouts/: layout.html
app/templates/pages/: homepage.html  recommendations.html
migrations/: README  env.py
migrations/versions/: 0b0fff1d7fc0_initial_migration.py  216b8b0d302b_initial_migration.py
