[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Gojinevschi04 <annagojinevschi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
