[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Gojinevschi04 <annagojinevschi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
sqlmodel = "^0.0.18"
asyncpg = "^0.29.0"
starlette = "^0.37.2"
pydantic = "^2.7.1"
click = "^8.1.7"
greenlet = "^3.0.3"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
